--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>
       Lucas Goulart Salman
     </title>
-    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="personal-portfolio
+/style.css">
     <link rel="icon" href="" type="image/x-icon"> <!--ADICIONAR ICON BARRA DO NAVEGADOR-->
     <meta charset="UTF-8">
     <meta http-equiv="'X-UA-Compatible" content="IE=edge" />
