--- a/aboutme.html
+++ b/aboutme.html
@@ -17,7 +17,7 @@
     <title>
       Lucas Goulart Salman
     </title>
-    <link rel="stylesheet" type="text/css" href="personal-portfolio/aboutme.css">
+    <link rel="stylesheet" type="text/css" href="aboutme.css">
     <link rel="icon" href="" type="image/x-icon"> <!--ADICIONAR ICON BARRA DO NAVEGADOR-->
     <meta charset="UTF-8">
     <meta http-equiv="'X-UA-Compatible" content="IE=edge" />
