--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <div id="modalOrganize" class="modal">
     <div class="modal-content">
       <div class="body-modal">
-        <img src="/logo-organize.svg" alt="" class="img-modal">
+        <img src="logo-organize.svg" alt="" class="img-modal">
         <p class="description-project">Project developed in 2023, being generated with the Angular Cli framework Version 16.2.0, with the aim of the client being able to organize their finances.</p>
         <p class="description-project description-maitenance">Project under maintenance</p>
       <!-- <div class="percentage">
