--- a/aboutme.html
+++ b/aboutme.html
@@ -42,7 +42,7 @@
 <div class="">
   <div class="container-aboutme">
     <div class="block-img">
-      <img src="/picture-lucas.jpg" alt="" class="picture-lucas">
+      <img src="picture-lucas.jpg" alt="" class="picture-lucas">
 
     </div>
    <div class="description">
