--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <div id="modalVaraldasGrifes" class="modal">
   <div class="modal-content">
     <div class="body-modal">
-      <img src="/varaldasgrifes-logo.png" alt="" class="img-modal">
+      <img src="varaldasgrifes-logo.png" alt="" class="img-modal">
       <p class="description-project">Project developed in 2023, being generated with the Angular Cli framework Version 16.2.0, with the aim of promoting the Varal das Grifes online store, where I am the owner.</p>    
       <p class="description-project description-maitenance">Project under maintenance</p>     
     <!-- <div class="percentage">
