--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div>
       <!--ADICIONAR ICON DE EMAIL E NUMERO DE TELEFONE-->
       <a href="https://github.com/lucgoulart"><img src="/icon-github.svg" alt="" class="icon-github"></a>
-      <a href="https://www.linkedin.com/in/lucas-goulart-salman-757b8b207/"><img src="/icon-linkedin.svg" alt="" class="icon-linkedin"></a>
+      <a href="https://www.linkedin.com/in/lucas-goulart-salman-757b8b207/"><img src="icon-linkedin.svg" alt="" class="icon-linkedin"></a>
     </div>
   </div>
 
