--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h1 class="title">Welcome.</h1>
       <div class="content-text">
         <h3>Hi, I'm Lucas Goulart</h3>
-        <p class="text">I'm a front end web developer passionate about<br> technology find out more at <a href="/about-me/aboutme.html">about me.</a></p>
+        <p class="text">I'm a front end web developer passionate about<br> technology find out more at <a href="aboutme.html">about me.</a></p>
       </div>
     </div>
 
