--- a/aboutme.html
+++ b/aboutme.html
@@ -27,7 +27,7 @@
     <body class="body">
       <div class="header">
         <div class="header__options-header">
-          <span class="menu-header"><a href="/index.html">Home</a></span>
+          <span class="menu-header"><a href="index.html">Home</a></span>
           <span class="menu-header"><a href="/html/aboutme.html">About me</a></span>
         </div>
         <div>
