--- a/aboutme.html
+++ b/aboutme.html
@@ -28,7 +28,7 @@
       <div class="header">
         <div class="header__options-header">
           <span class="menu-header"><a href="index.html">Home</a></span>
-          <span class="menu-header"><a href="/html/aboutme.html">About me</a></span>
+          <span class="menu-header"><a href="aboutme.html">About me</a></span>
         </div>
         <div>
           <!--ADICIONAR ICON DE EMAIL E NUMERO DE TELEFONE-->
